navbar fix overflow

--- a/marketify/src/app/components/navbar/navbar.component.scss
+++ b/marketify/src/app/components/navbar/navbar.component.scss
@@ -2,6 +2,10 @@
 nav{
   min-height: 60px;
   color: #484543;
+  position: sticky;
+  top: 0;
+  z-index: 1003;
+  background-color: #fff;
 }
 
 .nb-container{
@@ -57,7 +61,7 @@ nav{
 }
 
 .nb-sidebar{
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
